# trigram_grep

./: CMakeLists.txt  README.md  dirdemo.pro  mainwindow.cpp  mainwindow.h  mainwindow.ui  trigram_grep.pro
back/: IndexingWorker.cpp  SearchingWorker.cpp  Trigram.cpp
back/headers/: IndexingWorker.h  SearchingWorker.h  Trigram.h
